# rlscope

./: .dockerignore  .gdbinit  .gitignore  BUILD  BUILD.solo  CMakeLists.txt  Dockerfile  LICENSE  Makefile.sphinx  README.md  SConstruct  build_wheel.sh  data_set.cc  data_set.h  develop.sh  libs.cmake  make.sphinx.bat  model.cc  pytest.ini  requirements.baselines.txt  requirements.deploy.txt  requirements.develop.txt  requirements.docker.txt  requirements.docs.txt  requirements.ignore.txt  requirements.txt  run.py  run.sh  run_bench.sh  run_dbg.sh  run_docker.py  run_gdb.sh  run_gdb_client.sh  run_gdb_host.sh  setup.py  setup.sh  source_me.sh  ubuntu.apt_get.dependencies.sh  version.txt
cmake/: FindCUDAProfilingAPI.cmake  FindDoubleConversion.cmake  FindLibcupti.cmake  FindMySpdlog.cmake  FindTensorRT.cmake  LibFindMacros.cmake  Util.cmake  double_conversion.cmake
config/: cartpole_dqn.json
dev/sh/: run.py  run_gdb.sh  run_gdb_client.sh  run_gdb_host.sh
docker/: setup_docker.sh
dockerfiles/: .env  README.md  assembler.py  bashrc  requirements.txt  spec.yml  stack.manual.yml
dockerfiles/dockerfiles/: devel-gpu.Dockerfile
dockerfiles/partials/: jupyter.partial.Dockerfile  shell.partial.Dockerfile
dockerfiles/sh/: _install_rlscope.sh  all_experiments.sh  build_docker_image.sh  build_docs.sh  build_pip.sh  build_pip_package.sh  build_rlscope.sh  build_wheel.sh  configure_tflow.sh  develop_rlscope.sh  docker_build_common.sh  docker_runtime_common.sh  experiment_RL_framework_comparison.sh  experiment_algorithm_choice.sh  experiment_simulator_choice.sh  exports.sh  inference_stable_baselines.sh  install_baselines.sh  install_dev.sh  install_experiments.sh  install_iml.sh  install_iml_profiler.sh  install_minigo.sh  install_minigo_new.sh  install_reagent.sh  install_rlscope.sh  install_stable_baselines.sh  install_tensorflow.sh  install_tensorflow_v1.3.1.sh  install_tf_agents.sh  make_tflow.sh  make_tflow_dbg.sh  make_tfprof.sh  make_utils.sh  run_baselines.sh  run_dopamine.sh  run_tf_benchmarks.sh  source.sh  test_cupti_profiler_api.sh  test_reagent.sh  (+5 more)
dockerfiles/tests/: test_01_pong.sh
docs/: artifacts.rst  conf.py  host_config.rst  index.rst  installation.rst  modules.rst  rlscope.api.rst  rlscope.clib.rst  rlscope.cpp.rst  rlscope.examples.rst  rlscope.parser.rst  rlscope.profiler.rst  rlscope.protobuf.rst  rlscope.rst  rlscope.scripts.rst  rlscope.test.rst  unit_tests.rst
iml_profiler/: __init__.py  py_config.py  pytest.ini  run.py
iml_profiler/GPUtil/: GPUtil.py
iml_profiler/api/: __init__.py
iml_profiler/clib/: rlscope_api.py  sample_cuda_api.py
iml_profiler/experiment/: expr_config.py  util.py
iml_profiler/parser/: calibration.py  common.py  constants.py  cpu_gpu_util.py  dataframe.py  db.py  extrapolated_training_time.py  heatscale.py  nvprof.py  old.py  one_off_plot.py  overlap_result.py  plot.py  plot_index.py  profiling_overhead.py  pyprof.py  readers.py  stacked_bar_plots.py  stats.py  tasks.py  test_plot.py  tfprof.py  trace_events.py  training_progress.py
iml_profiler/profiler/: clib_wrap.py  concurrent.py  cudaprofile.py  estimator.py  experiment.py  fuzz_wrap.py  glbl.py  iml_logging.py  log_stacktrace.py  nvidia_gpu_query.py  profilers.py  proto_util.py  session.py  tensorflow_profile_context.py  timer.py  unit_test_util.py  util.py  wrap_util.py
iml_profiler/protobuf/: iml_prof.proto  pyprof.proto  unit_test.proto
iml_profiler/scripts/: analyze.py  bench.py  check_cuda_supported.py  cuda_api_prof.py  dump_proto.py  generate_iml_profiler_plot_index.py  madeup_cmd.py  (+8 more)
jupyter/: 01_rlscope_getting_started.ipynb  rlscope_tutorial.ipynb
postgres/: constraints.sql  indices.sql  tables.sql
precompiled/: download_asset.sh  get_release_upload_script.sh
prof_protobuf/: pyprof.proto  unit_test.proto
protobuf/: pyprof.proto
python/: model.py  py_config.py  run.py
rlscope/: __init__.py  luigi.cfg  py_config.py  pytest.ini  version.py
sqlite/: indices.sql  tables.sql
src/: data_set.cc  ld.version  model.cc
src/libs/: CMakeLists.txt
src/libs/achieved_occupancy_range_profiling/: CMakeLists.txt  achieved_occupancy_range_profiling.cu
src/libs/achieved_occupancy_range_profiling_refactored/: CMakeLists.txt  achieved_occupancy_range_profiling_refactored.cu
src/libs/callback_timestamp/: CMakeLists.txt  callback_timestamp.cu
src/libs/common_util/: CMakeLists.txt  Common.cpp  Common.h  CommonCuda.cu  CommonCuda.cuh  README.md  concurrency.cc  concurrency.h  debug_flags.cpp  debug_flags.h  defines.h  env_var.cc  env_var.h  error_codes.h  generic_logging.cc  generic_logging.h  json.cc  json.h  logging.cc  logging.h  my_status.cc  my_status.h  notify.h  usec_timer.h
src/libs/common_util/test/: test_common_util.cc
src/libs/deviceQuery/: CMakeLists.txt  deviceQuery.cpp  helper_cuda.h
src/libs/dqn_atari_test/: dqn_atari_test.cu
src/libs/gpu_util_experiment/: CMakeLists.txt  gpu_freq.cu  gpu_freq.cuh  gpu_freq.h  gpu_freq_cpp.cpp  gpu_util_experiment.cc  gpu_util_experiment.h
src/libs/include/: common_util.h  profilerhost_util.h  range_sampling.h  rlscope_common.h  tensorrt_common.h  tensorrt_common6.h  tensorrt_common7.h
src/libs/profilerhost_util/: CMakeLists.txt  CommonCuda.cu  Eval.cpp  Eval.h  List.cpp  List.h  Metric.cpp  Metric.h
src/libs/range_sampling/: CMakeLists.txt  README.md  RangeSampling.cpp  RangeSampling.h  range_sampling.proto
src/libs/rlscope_common/: CMakeLists.txt  Utils.cc  Utils.h
src/libs/tensorrt_common/: sampleEngines.h
src/libs/tensorrt_common6/: EntropyCalibrator.h  buffers.h  common.h  sampleOptions.cpp  sampleOptions.h
src/libs/tensorrt_common7/: CMakeLists.txt  EntropyCalibrator.h  buffers.h  common.h  parserOnnxConfig.h  sampleConfig.h  sampleDevice.cc  sampleDevice.h  sampleEngines.cpp  sampleInference.cpp  sampleInference.h  sampleOptions.cpp  sampleOptions.h  sampleReporting.cpp  sampleUtils.h
src/libs/trtexec/: CMakeLists.txt  trtexec.cpp
src/libs/trtexec6/: CMakeLists.txt  trtexec.cpp
src/libs/trtexec7/: CMakeLists.txt  prn_utils.py  tracer.py  trtexec.cpp
whl/: index.html
(+352 files in other folders)
